[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/menus/level_choicer.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/df_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/df_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/menus/level_item.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/right_arrow_48.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/left_arrow_48.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/back_32.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/back_48.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/play_32.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/void_48.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/df_24.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/sprites/star_32.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/star_frame_32.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/menu_frame_150x200.png" type="Texture" id=14]

[node name="level_choicer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m_container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vb_container" type="VBoxContainer" parent="m_container"]
margin_right = 740.0
margin_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hb_container_logo" type="HBoxContainer" parent="m_container/vb_container"]
margin_right = 740.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( -811.031, 48 )
size_flags_horizontal = 3

[node name="back" type="TextureButton" parent="m_container/vb_container/hb_container_logo"]
margin_right = 48.0
margin_bottom = 66.0
texture_normal = ExtResource( 8 )

[node name="logo" type="Label" parent="m_container/vb_container/hb_container_logo"]
margin_left = 52.0
margin_right = 688.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "MOON LANDER"
align = 1
valign = 1

[node name="lspace" type="TextureButton" parent="m_container/vb_container/hb_container_logo"]
margin_left = 692.0
margin_right = 740.0
margin_bottom = 66.0
texture_normal = ExtResource( 10 )

[node name="hb_container_levels" type="HBoxContainer" parent="m_container/vb_container"]
margin_top = 116.0
margin_right = 740.0
margin_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40

[node name="c_container_left" type="CenterContainer" parent="m_container/vb_container/hb_container_levels"]
margin_right = 48.0
margin_bottom = 274.0

[node name="left" type="TextureButton" parent="m_container/vb_container/hb_container_levels/c_container_left"]
margin_top = 113.0
margin_right = 48.0
margin_bottom = 161.0
texture_normal = ExtResource( 6 )

[node name="c_container_levels" type="CenterContainer" parent="m_container/vb_container/hb_container_levels"]
margin_left = 88.0
margin_right = 652.0
margin_bottom = 274.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="g_container" type="GridContainer" parent="m_container/vb_container/hb_container_levels/c_container_levels"]
margin_left = 246.0
margin_top = 101.0
margin_right = 318.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 25
custom_constants/hseparation = 25
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_item1" parent="m_container/vb_container/hb_container_levels/c_container_levels/g_container" groups=[
"level_items",
] instance=ExtResource( 4 )]

[node name="text" parent="m_container/vb_container/hb_container_levels/c_container_levels/g_container/level_item1" index="0"]
text = "1"

[node name="c_container_right" type="CenterContainer" parent="m_container/vb_container/hb_container_levels"]
margin_left = 692.0
margin_right = 740.0
margin_bottom = 274.0

[node name="right" type="TextureButton" parent="m_container/vb_container/hb_container_levels/c_container_right"]
margin_top = 113.0
margin_right = 48.0
margin_bottom = 161.0
texture_normal = ExtResource( 5 )

[node name="level_info" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="level_info"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m_container" type="MarginContainer" parent="level_info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c_container" type="CenterContainer" parent="level_info/m_container"]
margin_right = 740.0
margin_bottom = 390.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items_bg" type="TextureRect" parent="level_info/m_container/c_container"]
margin_left = 294.0
margin_top = 95.0
margin_right = 446.0
margin_bottom = 295.0
texture = ExtResource( 14 )

[node name="vb_container" type="VBoxContainer" parent="level_info/m_container/c_container"]
margin_left = 313.0
margin_top = 113.0
margin_right = 427.0
margin_bottom = 277.0
custom_constants/separation = 15

[node name="lvl_name" type="Label" parent="level_info/m_container/c_container/vb_container"]
margin_right = 114.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "LEVEL 1"
align = 1
valign = 1

[node name="lvl_time" type="Label" parent="level_info/m_container/c_container/vb_container"]
margin_top = 48.0
margin_right = 114.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "TIME: 0s"
align = 1
valign = 1

[node name="cc_lvl_stars" type="CenterContainer" parent="level_info/m_container/c_container/vb_container"]
margin_top = 85.0
margin_right = 114.0
margin_bottom = 117.0

[node name="hbc_frames" type="HBoxContainer" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars"]
margin_left = 5.0
margin_right = 109.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="framestar_1" type="TextureRect" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/hbc_frames"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 13 )

[node name="framestar_2" type="TextureRect" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/hbc_frames"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 13 )

[node name="framestar_3" type="TextureRect" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/hbc_frames"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 13 )

[node name="wrapper_stars" type="Control" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars"]
margin_left = 57.0
margin_top = 16.0
margin_right = 57.0
margin_bottom = 16.0

[node name="hbc_stars" type="HBoxContainer" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/wrapper_stars"]
margin_left = -52.0
margin_top = -16.0
margin_right = 52.0
margin_bottom = 16.0

[node name="star_1" type="TextureRect" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/wrapper_stars/hbc_stars"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 12 )

[node name="star_2" type="TextureRect" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/wrapper_stars/hbc_stars"]
visible = false
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 12 )

[node name="star_3" type="TextureRect" parent="level_info/m_container/c_container/vb_container/cc_lvl_stars/wrapper_stars/hbc_stars"]
visible = false
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 12 )

[node name="cc_buttons" type="CenterContainer" parent="level_info/m_container/c_container/vb_container"]
margin_top = 132.0
margin_right = 114.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbc_buttons" type="HBoxContainer" parent="level_info/m_container/c_container/vb_container/cc_buttons"]
margin_left = 21.0
margin_right = 93.0
margin_bottom = 32.0
custom_constants/separation = 8

[node name="back_choice" type="TextureButton" parent="level_info/m_container/c_container/vb_container/cc_buttons/hbc_buttons"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )

[node name="play" type="TextureButton" parent="level_info/m_container/c_container/vb_container/cc_buttons/hbc_buttons"]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 32.0
texture_normal = ExtResource( 9 )
[connection signal="button_up" from="m_container/vb_container/hb_container_logo/back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="m_container/vb_container/hb_container_levels/c_container_levels/g_container/level_item1" to="." method="_on_level_item1_button_up"]
[connection signal="button_up" from="level_info/m_container/c_container/vb_container/cc_buttons/hbc_buttons/back_choice" to="." method="_on_back_choice_button_up"]
[connection signal="button_up" from="level_info/m_container/c_container/vb_container/cc_buttons/hbc_buttons/play" to="." method="_on_play_button_up"]

[editable path="m_container/vb_container/hb_container_levels/c_container_levels/g_container/level_item1"]
